# pypqd

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example1.ipynb  example2.ipynb  example3.ipynb  index.md  make.bat  requirements.txt
src/pypqd/: __init__.py  auxiliary.py  synthetic.py
tests/: test_pypqd.py
