[tool.poetry]
name = "pypqd"
version = "0.1.2"
description = "Power quality disturbances dataset generator."
authors = ["Rafael Angel Montoya Gutierrez"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.4"
matplotlib = ">=3.8.3"
pandas = ">=2.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
